# diglett

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  _inbox.py  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
diglett/: __init__.py  decorate.py  decorators.py  diglett.py  display.py  eda.py  insist.py  join.py  transform.py  utils.py  visualize.py  wrangle.py
diglett/viz/: __init__.py  df.py  hist.py  legos.py  line.py  misc.py  plotly_funcs.py
diglett/wrangle/: __init__.py  dtypes.py  feature_eng.py  group.py  join.py  misc.py  numeric.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/source/: conf.py  diglett.rst  index.rst  modules.rst
src/diglett/: __init__.py  eda.py  group.py  insist.py  join.py  output.py  transform.py  utils.py
tests/: test_eda.py  test_fillnas.py  test_format_helper.py  test_group.py  test_insist.py  test_multi_moving_average.py  test_reindex_by_sum.py  test_summarize.py  test_tabulate.py  test_transform.py  test_utils.py  test_verbose_merge.py  test_wrangle_group.py
