[tool.poetry]
name = "diglett"
version = "0.2.0"
description = "Tools for data wrangling."
readme = "README.md"
authors = ["Geoff Ruddock <geoff@ruddock.ca>"]
documentation = "https://diglett.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8.6"
pandas = "1.3.0"
ipython = "^7.26.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
Jinja2 = "^3.0.2"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {version = "^5.5", extras = ["toml"]}
pytest-cov = "^2.12.1"
flake8-docstrings = "^1.6.0"
Sphinx = "^4.1.2"
sphinx-autodoc-typehints = "^1.12.0"
darglint = "^1.8.1"
mypy = "^0.910"
typeguard = "^2.13.0"
codecov = "^2.1.12"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["diglett"]

[tool.coverage.report]
show_missing = true